<resources>
    <string name="app_name">LearnAr</string>
    <string name="basic_augmentation">Basic Augmentation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="augmented_image">Augmented Image</string>
    <string name="cylinder">Cylinder</string>
    <string name="sphere">Sphere</string>
    <string name="cube">Cube</string>
    <string name="build_model">Build Model</string>
    <string name="vector">vector</string>
</resources>