<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnBasicAugmentation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_augmentation" />

        <Button
            android:id="@+id/btnAugmentedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/augmented_image" />

        <Button
            android:id="@+id/btnBuildModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_model" />
    </LinearLayout>

</layout>
